fix gap at top of page

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
   height: fit-content;
 }
 
-main {
+body {
   min-height: 100vh;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
